--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "stdlib.h": "c",
         "philosophers.h": "c"
-    }
+    },
+    "42header.username": "regea-go"
 }
