--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "stdlib.h": "c",
-        "philosophers.h": "c"
+        "philosophers.h": "c",
+        "time.h": "c"
     },
     "42header.username": "regea-go"
 }
